--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1657,66 +1657,73 @@
 .frame-one,
 .frame-two,
 .frame-three {
-    height: 325px;
-    width: 325px;
+    height: 100%;
+    /* height: 325px;
+    width: 325px; */
     margin-bottom: 16px;
     transition: var(--transition);
 }
 
 .frame-one {
-    border: 12px solid black;
-    box-shadow: 1px 1px 0px #6C6B6B,
+    /* border: 12px solid black; */
+    /* box-shadow: 1px 1px 0px #6C6B6B,
         2px 2px 0px #6C6B6B,
         3px 3px 0px #6C6B6B,
         4px 4px 0px #6C6B6B,
         5px 5px 0px #6C6B6B,
         6px 6px 0px #6C6B6B,
         7px 7px 0px #6C6B6B,
-        8px 8px 0px #6C6B6B;
+        8px 8px 0px #6C6B6B; */
+        height: 100%;
 }
 
 
 .frame-two {
-    border: 12px solid white;
-    box-shadow: 1px 1px 0px silver,
+    /* border: 12px solid white; */
+    /* box-shadow: 1px 1px 0px silver,
         2px 2px 0px silver,
         3px 3px 0px silver,
         4px 4px 0px silver,
         5px 5px 0px silver,
         6px 6px 0px silver,
         7px 7px 0px silver,
-        8px 8px 0px silver;
+        8px 8px 0px silver; */
+        height: 100%;
 }
 
 .frame-three {
-    border: 12px solid #c2844d;
-    box-shadow: 1px 1px 0px #A47449,
+    /* border: 12px solid #c2844d; */
+    /* box-shadow: 1px 1px 0px #A47449,
         2px 2px 0px #A47449,
         3px 3px 0px #A47449,
         4px 4px 0px #A47449,
         5px 5px 0px #A47449,
         6px 6px 0px #A47449,
         7px 7px 0px #A47449,
-        8px 8px 0px #A47449;
+        8px 8px 0px #A47449; */
+        height: 100%;
 }
 
 
 .sub-frame {
-    border: 1px solid silver;
-    height: 301px;
-    width: 301px;
-    box-shadow: 0px 0px 5px black inset;
+    /* border: 1px solid silver; */
+    /* height: 301px;
+    width: 301px; */
+    /* box-shadow: 0px 0px 5px black inset; */
+    height: 100%;
 }
 
 .sub-frame-wood {
-    border: 1px solid #A47449;
-    height: 301px;
-    width: 301px;
-    box-shadow: 0px 0px 5px black inset;
+    /* border: 1px solid #A47449; */
+    /* height: 301px;
+    width: 301px; */
+    /* box-shadow: 0px 0px 5px black inset; */
+    height: 100%;
 }
 
 .sub-frame-inner {
-    height: 301px;
+    height: 100%;
+    /* height: 301px; */
     justify-content: center;
     align-items: center;
     display: flex;
@@ -1725,18 +1732,21 @@
 }
 
 .frame-image-large {
-    height: 301px;
-    width: 301px;
+    height: 100%;
+    /* height: 301px; */
+    /* width: 301px; */
 }
 
 .frame-image-medium {
-    height: 250px;
-    width: 250px;
+    height: 100%;
+    /* height: 250px; */
+    /* width: 250px; */
 }
 
 .frame-image-small {
-    height: 200px;
-    width: 200px;
+    height: 100%;
+    /* height: 200px; */
+    /* width: 200px; */
 }
 
 
@@ -4462,9 +4472,14 @@ footer h4 {
     color: #e00;
 }
 
-.UserAdmin .ImageContainer {}
+.UserAdmin .ImageContainer {
+    height: 100%;
+    width: 100%;
+}
 
-.UserAdmin .frameMessage {}
+.UserAdmin .frameMessage {
+    
+}
 
 .UserAdmin .ToolBox {
     background-color: var(--theme-bg-lg);
