--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1665,59 +1665,59 @@
 }
 
 .frame-one {
-    /* border: 12px solid black; */
-    /* box-shadow: 1px 1px 0px #6C6B6B,
+    border: 12px solid black;
+    box-shadow: 1px 1px 0px #6C6B6B,
         2px 2px 0px #6C6B6B,
         3px 3px 0px #6C6B6B,
         4px 4px 0px #6C6B6B,
         5px 5px 0px #6C6B6B,
         6px 6px 0px #6C6B6B,
         7px 7px 0px #6C6B6B,
-        8px 8px 0px #6C6B6B; */
+        8px 8px 0px #6C6B6B;
         height: 100%;
 }
 
 
 .frame-two {
-    /* border: 12px solid white; */
-    /* box-shadow: 1px 1px 0px silver,
+    border: 12px solid white;
+    box-shadow: 1px 1px 0px silver,
         2px 2px 0px silver,
         3px 3px 0px silver,
         4px 4px 0px silver,
         5px 5px 0px silver,
         6px 6px 0px silver,
         7px 7px 0px silver,
-        8px 8px 0px silver; */
+        8px 8px 0px silver;
         height: 100%;
 }
 
 .frame-three {
-    /* border: 12px solid #c2844d; */
-    /* box-shadow: 1px 1px 0px #A47449,
+    border: 12px solid #c2844d;
+    box-shadow: 1px 1px 0px #A47449,
         2px 2px 0px #A47449,
         3px 3px 0px #A47449,
         4px 4px 0px #A47449,
         5px 5px 0px #A47449,
         6px 6px 0px #A47449,
         7px 7px 0px #A47449,
-        8px 8px 0px #A47449; */
+        8px 8px 0px #A47449;
         height: 100%;
 }
 
 
 .sub-frame {
-    /* border: 1px solid silver; */
+    border: 1px solid silver;
     /* height: 301px;
     width: 301px; */
-    /* box-shadow: 0px 0px 5px black inset; */
+    box-shadow: 0px 0px 5px black inset;
     height: 100%;
 }
 
 .sub-frame-wood {
-    /* border: 1px solid #A47449; */
+    border: 1px solid #A47449 !important;
     /* height: 301px;
     width: 301px; */
-    /* box-shadow: 0px 0px 5px black inset; */
+    box-shadow: 0px 0px 5px black inset;
     height: 100%;
 }
 
@@ -1732,21 +1732,21 @@
 }
 
 .frame-image-large {
-    height: 100%;
-    /* height: 301px; */
-    /* width: 301px; */
+    /* height: 100%; */
+    height: 301px;
+    width: 301px;
 }
 
 .frame-image-medium {
-    height: 100%;
-    /* height: 250px; */
-    /* width: 250px; */
+    /* height: 100%; */
+    height: 250px;
+    width: 250px;
 }
 
 .frame-image-small {
-    height: 100%;
-    /* height: 200px; */
-    /* width: 200px; */
+    /* height: 100%; */
+    height: 200px;
+    width: 200px;
 }
 
 
