--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5381,6 +5381,17 @@ footer h4 {
     justify-content: center;
     box-shadow: -2px 2px 10px #0002;
 }
+.change-size{
+    cursor: pointer;
+    background-color: var(--primary-theme);
+    color: #f8f9fa;
+    display: flex;
+    border-radius: 5px;
+    padding: 5px 8px;
+    align-items: center;
+    justify-content: center;
+    box-shadow: -2px 2px 10px #0002;
+}
 .text-cross-cta{
     cursor: pointer;
     position: absolute;
