--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5456,3 +5456,23 @@ footer h4 {
   bottom: 42px;
  }
 }
+.card-container {
+    display: flex;
+    flex-direction: column; 
+    height: 500px; /* Adjust as needed */
+}
+
+.dec1 {
+    flex-grow: 1; 
+    overflow: hidden; 
+}
+
+.img-fluid {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+.card-content {
+    padding: 15px; /* Add padding to the content area */
+}
