--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -1,6 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 
 
+/* mobile  */
+@media (max-width: 768px) {
+    .bg-video {
+      display: none;
+    }
+  }
+
+  
+ 
+  
+  .home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #f5f5f5;
+  }
+  
+  .home h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    font-family: "Playfair Display SC", serif;
+    color: #333;
+    margin-bottom: 20px;
+  }
+  
+  .home p {
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: "Playfair Display SC", serif;
+    color: #333;
+    margin-bottom: 20px;
+  }
+  
+  .home a {
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: "Playfair Display SC", serif;
+    color: #333;
+    text-decoration: none;
+    border: 2px solid #333;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: all 0.3s;
+  }
+  
+  .home a:hover {
+    background-color: #333;
+    color: #f5f5f5;
+  }
+  
+  .playfair-display-sc-light {
+    font-family: "Playfair Display SC", serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .playfair-display-sc-light-italic {
+    font-family: "Playfair Display SC", serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .playfair-display-sc-regular {
+    font-family: "Playfair Display SC", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .playfair-display-sc-bold {
+    font-family: "Playfair Display SC"
+  }
+
 .playfair-display-sc-regular {
     font-family: "Playfair Display SC", serif;
     font-weight: 400;
