--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1738,18 +1738,23 @@
     /* height: 100%; */
     height: 301px;
     width: 301px;
+    
 }
 
 .frame-image-medium {
     /* height: 100%; */
     height: 250px;
     width: 250px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .frame-image-small {
     /* height: 100%; */
     height: 200px;
     width: 200px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
